# Zedboard-Zynq-7000

./: .env.example  .gitignore  README.md  deploy.sh
docs/: PORTING_TO_ARM.md
zed/: JSON 계수와 파이프라인 단계 매핑 정리.txt  README.md  coeffs.json  coeffs.json 수식 관련 설명.md  coeffs_example.json  deploy.sh  main.py  main_multich.py  main_multich_slider.py  main_multich_slider_fast.py  perf_log.csv  requirements.txt  stream_log.csv
zed/c/: CMakeLists.txt  iio_reader.c  iio_reader_test.c  main.c
zed/c/libiio/include/: iio.h
zed/logs/2025-09-12/: perf_log_1.csv  perf_log_2.csv  perf_log_3.csv  perf_log_4.csv  perf_log_5.csv  stream_log_1.csv  stream_log_2.csv  stream_log_3.csv  stream_log_4.csv  stream_log_5.csv
zed/python/: generate_sos.py  main.py  package-lock.json  package.json  requirements.txt
zed/python/server/: JSON 계수와 파이프라인 단계 매핑 정리.txt  app.py  app_forBoard.py  coeffs.json  coeffs_identity.json  coeffs_testpoly.json  pipeline.py  pipeline_forBoard.py
zed/python/server/bak/: app.py  coeffs.json  pipeline.py
zed/python/server/logs/2025-09-18/: perf_log_1.csv  perf_log_10.csv  perf_log_11.csv  perf_log_12.csv  perf_log_13.csv  perf_log_14.csv  perf_log_15.csv  perf_log_16.csv  perf_log_17.csv  perf_log_18.csv  perf_log_19.csv  perf_log_2.csv  perf_log_21.csv  perf_log_22.csv  perf_log_23.csv  perf_log_24.csv  perf_log_25.csv  perf_log_26.csv  perf_log_27.csv  perf_log_28.csv  perf_log_29.csv  perf_log_3.csv  perf_log_30.csv  perf_log_31.csv  (+45 more)
zed/python/server/static/: app.js  index.html  style.css  test.html  test.js
zed/service/: adcserver.service  start.sh
(+377 files in other folders)
